feat(championship): Update content

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -68,10 +68,12 @@
 
 <div *ngIf="season == '2023-2024'">
 
+  <!--
   <p class="normal">
     <b>Spieltermine Frühjahr 2024:</b>
   </p>
-
+   -->
+<!--
   <p class="normal">
     13. Runde - DIENSTAG, 18.06.2024 - 19:00 Uhr - Sportplatz Stainz - HV TDP Stainz : FC St. Johann/Köppling
   </p>
@@ -79,6 +81,7 @@
   <p class="normal">
     SAMSTAG, 15.06.2024 - Sirnitz (Kärnten) - Hinti-Cup
   </p>
+  -->
 
   <hr>
 
@@ -152,13 +155,16 @@
     11. Runde - STT Multitask : HV TDP Stainz 3:4
   </p>
 
-  <p class="normal">
+  <p class="small">
     Cup Halbfinale - HV TDP Stainz : STT Fürndörfler 0:4
   </p>
 
-
-  <p class="normal">
+  <p class="small">
     12. Runde - STT Wörgötter : HV TDP Stainz 3:0
+  </p>
+
+  <p class="small">
+    13. Runde - HV TDP Stainz : FC St. Johann/Köppling 3:7
   </p>
 
   <!--
