feat(goldenshot): Finish voting

--- a/src/app/goldenshot-voting/goldenshot-voting.component.html
+++ b/src/app/goldenshot-voting/goldenshot-voting.component.html
@@ -40,7 +40,7 @@
 
   <ul>
     <li class="normal"><i class="fa fa-check fa-sm" style="color: green;"></i> Anmeldung über unser Online Formular</li>
-    <li class="normal">Online Voting auf unserer Homepage (max. 50 Teilnehmer stehen zur Wahl!)</li>
+    <li class="normal"><i class="fa fa-check fa-sm" style="color: green;"></i> Online Voting auf unserer Homepage (max. 50 Teilnehmer stehen zur Wahl!)</li>
     <li class="normal">Die Top 3 des Online Votings schaffen den Einzug ins Finale und dürfen am Tag des Sommerfestes um den Hauptpreis spielen!</li>
   </ul>
 
