--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@
 
       <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button>
       <!-- <button mat-menu-item routerLink="/torschusschallenge" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge</button> -->
-      <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button>
+      <!-- <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button> -->
 
       <!-- <button mat-menu-item routerLink="/entenlauf" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenlauf</button> -->
 
@@ -89,7 +89,7 @@
 
       <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button>
       <!-- <button mat-menu-item routerLink="/torschusschallenge" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge</button> -->
-      <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button>
+      <!-- <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button> -->
 
       <!--  <button mat-menu-item routerLink="/entenlauf" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenlauf</button> -->
 
