--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,14 +12,15 @@
 
       <button mat-menu-item [matMenuTriggerFor]="championship"><span class="fa fa-bookmark fa-sm"></span> Meisterschaft</button>
       <mat-menu #championship="matMenu">
+        <button mat-menu-item routerLink="/championship/2024-2025">Saison 2024/2025</button>
         <button mat-menu-item routerLink="/championship/2023-2024">Saison 2023/2024</button>
         <button mat-menu-item routerLink="/championship/2022-2023">Saison 2022/2023</button>
         <button mat-menu-item routerLink="/championship/2021-2022">Saison 2021/2022</button>
       </mat-menu>
 
-      <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button>
+      <!-- <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button> -->
       <!-- <button mat-menu-item routerLink="/torschusschallenge" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge</button> -->
-      <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button>
+      <!-- <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button> -->
 
       <!-- <button mat-menu-item routerLink="/entenlauf" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenlauf</button> -->
 
@@ -36,6 +37,7 @@
 
       <button mat-menu-item [matMenuTriggerFor]="videos"><span class="fa fa-video fa-sm"></span> Videos</button>
       <mat-menu #videos="matMenu">
+          <button mat-menu-item routerLink="/social/2024-2025">Saison 2024/2025</button>
           <button mat-menu-item routerLink="/social/2023-2024">Saison 2023/2024</button>
           <button mat-menu-item routerLink="/social/2022-2023">Saison 2022/2023</button>
           <button mat-menu-item routerLink="/social/2021-2022">Saison 2021/2022</button>
@@ -45,8 +47,8 @@
 
       <button mat-menu-item routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</button>
       <!--  <button mat-menu-item routerLink="/kleinfeldturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Kleinfeldturnier</button> -->
-      <!--  <button mat-menu-item routerLink="/bocciaturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Bocciaturnier</button> -->
-      <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Hallenturnier</button>
+       <button mat-menu-item routerLink="/bocciaturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Bocciaturnier</button>
+      <!-- <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Hallenturnier</button> -->
       <button mat-menu-item routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Über uns</button>
       <button mat-menu-item routerLink="/contact" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Kontakt</button>
       <button mat-menu-item routerLink="/fanshop" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Fanshop</button>
@@ -82,6 +84,7 @@
 
       <button mat-menu-item [matMenuTriggerFor]="championship"><span class="fa fa-bookmark fa-sm"></span> Meisterschaft</button>
       <mat-menu #championship="matMenu">
+        <button mat-menu-item routerLink="/championship/2024-2025">Saison 2024/2025</button>
         <button mat-menu-item routerLink="/championship/2023-2024">Saison 2023/2024</button>
         <button mat-menu-item routerLink="/championship/2022-2023">Saison 2022/2023</button>
         <button mat-menu-item routerLink="/championship/2021-2022">Saison 2021/2022</button>
@@ -89,7 +92,7 @@
 
       <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button>
       <!-- <button mat-menu-item routerLink="/torschusschallenge" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge</button> -->
-      <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button>
+      <!-- <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button> -->
 
       <!--  <button mat-menu-item routerLink="/entenlauf" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenlauf</button> -->
 
@@ -106,6 +109,7 @@
 
       <button mat-menu-item [matMenuTriggerFor]="videos"><span class="fa fa-video fa-sm"></span> Videos</button>
       <mat-menu #videos="matMenu">
+          <button mat-menu-item routerLink="/social/2024-2025">Saison 2024/2025</button>
           <button mat-menu-item routerLink="/social/2023-2024">Saison 2023/2024</button>
           <button mat-menu-item routerLink="/social/2022-2023">Saison 2022/2023</button>
           <button mat-menu-item routerLink="/social/2021-2022">Saison 2021/2022</button>
@@ -115,8 +119,8 @@
 
       <button mat-menu-item routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</button>
       <!--  <button mat-menu-item routerLink="/kleinfeldturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Kleinfeldturnier</button> -->
-      <!--  <button mat-menu-item routerLink="/bocciaturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Bocciaturnier</button> -->
-      <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Hallenturnier</button>
+       <button mat-menu-item routerLink="/bocciaturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Bocciaturnier</button>
+      <!-- <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Hallenturnier</button> -->
       <button mat-menu-item routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Über uns</button>
       <button mat-menu-item routerLink="/contact" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Kontakt</button>
       <button mat-menu-item routerLink="/fanshop" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Fanshop</button>
