feat(boccia): Update boccia component

--- a/src/app/boccia/boccia.component.html
+++ b/src/app/boccia/boccia.component.html
@@ -4,7 +4,7 @@
 
      <div fxFlex>
             <div>
-               <h3 class="large header">Bocciaturnier 2023</h3>
+               <h3 class="large header">Bocciaturnier 2024</h3>
                <hr>
             </div>
      </div>
@@ -12,74 +12,91 @@
     <div fxFlex>
       <div fxLayout="column" fxLayout.gt-sm="row">
           <div fxFlex="50" fxFlexOffset="10px">
+
             <p class="normal">
-              <p class="normal">
-                Wir holen das Sommerspiel nach Stainz! 🏖 <br>
-                Gespielt wird in 2er Teams - also sucht euch einen Partner und meldet euch an! 💪 <br>
-                Sichert euch euren Platz und seid dabei! 🥳
-              </p>
-              <p class="normal">
-                📅 WANN: Samstag, 26.08.2023<br>
-              </p>
+              Nach der erfolgreichen Premiere bringen wir auch heuer das Kultspiel aus Italien nach Stainz!<br>
+            </p>
 
-              <p class="normal">
-                💰 KOSTEN: 20 Euro pro Team<br>
-              </p>
+            <p class="normal">
+              Hier die wichtigsten Infos:
+            </p>
 
-              <p class="normal">
-                ANMELDEMÖGLICHKEITEN<br>
-                ➡ direkt hier auf unserer Homepage www.hvtdpstainz.at<br>
-                ➡ 📲 telefonisch unter 0664/43 10 021<br>
-                ➡ 📧 E-Mail: hvtdpstainz@gmx.at
-              </p>
+            <p class="normal">
+              📅 Spieltermin: Samstag, 10. August 2024<br>
+              ⏱ Beginn: 11 Uhr<br>
+              💸 Nenngeld: 20€<br>
+              📌 Spielform: 2 Spieler<br>
+            </p>
 
-            </div>
-          <div fxFlex="50" fxFlexOffset="25px">
-            <!-- <h3 style="text-align: center;">Hier findest du unser Stadion:</h3> -->
-            <!-- this creates a google map on the page with the given lat/lng from -->
-            <!-- the component as the initial center of the map: -->
-            <img class="imageSmallCenter" src="assets/images/boccia_2023.jpeg " style="width: 400px;" >
+            <p class="normal">
+              Sichert euch euren Platz und meldet euch an! Wir freuen uns auf euch!<br>
+            </p>
+
+            <p class="normal">
+              Anmeldung unter:<br>
+              ➡ direkt hier auf unserer Homepage<br>
+              ➡ 📲 telefonisch unter 0664/43 10 021<br>
+              ➡ 📧 E-Mail: hvtdpstainz@gmx.at<br>
+              ➡ Facebook: HV TDP Stainz<br>
+              ➡ Instagram: hvtdpstainz_2014
+            </p>
+
+            <p class="normal">
+              Kontodaten:<br>
+              IBAN: AT67 3843 9000 0481 3481<br>
+              BIC: RZSTAT2G439<br>
+              Empfänger: HV TDP Stainz<br>
+              Verwendungszweck: Boccia 24 + euren Mannschaftsnamen
+            </p>
+
+            <p class="normal">
+              Erst mit der Einzahlung des Nenngeldes ist die Anmeldung fixiert!
+            </p>
+
           </div>
-        </div>
+          <div fxFlex="50" fxFlexOffset="25px">
+            <img class="imageSmallCenter" src="assets/images/boccia_2024.jpeg " style="width: 400px;" >
+          </div>
       </div>
+    </div>
 
-      <div fxFlex fxFlexOffset="20px" class="form-size" >
-        <h3>Sichere dir die Teilnahme gleich jetzt ⬇</h3>
-        <!-- <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p> -->
-        <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()" style="background-color: darkblue;color: rgba(255,255,255,.7);border: 27.4px solid;">
-          <p>
+    <div fxFlex fxFlexOffset="20px" class="form-size" style="padding-left: 20px;">
+      <h3>Sichere dir die Teilnahme gleich jetzt ⬇</h3>
+      <!-- <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p> -->
+      <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()" style="background-color: darkblue;color: rgba(255,255,255,.7);border: 27.4px solid;">
+        <p>
+          <mat-form-field class="full-width"
+          color="{{(formErrors.name) ? 'warn' : 'primary'}}">
+            <input class="formElement" matInput type="text" formControlName="name" placeholder="Ansprechperson" required>
+            <mat-hint>
+              <span [hidden]="!(formErrors.name)">
+                {{formErrors.name}}</span>
+            </mat-hint>
+          </mat-form-field>
+        </p>
+
+        <p>
             <mat-form-field class="full-width"
-            color="{{(formErrors.name) ? 'warn' : 'primary'}}">
-              <input class="formElement" matInput type="text" formControlName="name" placeholder="Ansprechperson" required>
-              <mat-hint>
-                <span [hidden]="!(formErrors.name)">
-                  {{formErrors.name}}</span>
-              </mat-hint>
+            color="{{(formErrors.teamname) ? 'warn' : 'primary'}}">
+                <input class="formElement" matInput type="text" formControlName="teamname" placeholder="Mannschaftsname" required>
+                <mat-hint>
+                <span [hidden]="!(formErrors.teamname)">
+                    {{formErrors.teamname}}</span>
+                </mat-hint>
             </mat-form-field>
-          </p>
+        </p>
 
-          <p>
-              <mat-form-field class="full-width"
-              color="{{(formErrors.teamname) ? 'warn' : 'primary'}}">
-                  <input class="formElement" matInput type="text" formControlName="teamname" placeholder="Mannschaftsname" required>
-                  <mat-hint>
-                  <span [hidden]="!(formErrors.teamname)">
-                      {{formErrors.teamname}}</span>
-                  </mat-hint>
-              </mat-form-field>
-          </p>
+        <button style="margin: 100 auto;float: right; font-size: 20px" class="formElement" type="submit" mat-button class="background-primary" [disabled]="feedbackForm.invalid" >Anmeldung jetzt abschicken</button>
 
-          <button style="margin: 100 auto;float: right; font-size: 20px" class="formElement" type="submit" mat-button class="background-primary" [disabled]="feedbackForm.invalid" >Anmeldung jetzt abschicken</button>
+      </form>
 
-        </form>
-
-        <div *ngIf="submittedFeedback">
-          <div>
-            <h2>Wir haben deine Anmeldung erhalten, Vielen Dank! Wir melden uns bei dir in Kürze.</h2>
-            <p>Ansprechperson: {{submittedFeedback.name}}</p>
-            <p>Teamname: {{submittedFeedback.teamname}}</p>
-        </div>
+      <div *ngIf="submittedFeedback">
+        <div>
+          <h2>Wir haben deine Anmeldung erhalten, Vielen Dank! Wir melden uns bei dir in Kürze.</h2>
+          <p>Ansprechperson: {{submittedFeedback.name}}</p>
+          <p>Teamname: {{submittedFeedback.teamname}}</p>
       </div>
+    </div>
 
 </div>
 <br>
