--- a/src/app/hallenturnier/hallenturnier.component.html
+++ b/src/app/hallenturnier/hallenturnier.component.html
@@ -37,7 +37,7 @@
               </p>
 
               <p class="normal">
-                Anmeldeschluss: Dienstag, 09.01.2025 (ACHTUNG: Begrenzte Teilnehmerzahl!!!)<br>
+                Anmeldeschluss: Mittwoch, 08.01.2025 (ACHTUNG: Begrenzte Teilnehmerzahl!!!)<br>
                 Das Nenngeld MUSS im Vorhinein überwiesen werden, denn nur dann ist man FIX angemeldet!
                 (Bei der Anmeldung kann man den Vorrundentag entscheiden, solange verfügbar)
               </p>
@@ -56,7 +56,7 @@
             <!-- <h3 style="text-align: center;">Hier findest du unser Stadion:</h3> -->
             <!-- this creates a google map on the page with the given lat/lng from -->
             <!-- the component as the initial center of the map: -->
-            <img class="imageSmallCenter" src="assets/images/hallenturnier_2023.jpg " style="height: 300px; width: 450px;" >
+            <img class="imageSmallCenter" src="assets/images/hallenturnier_2025.jpeg " style="width: 450px;" >
           </div>
         </div>
       </div>
@@ -87,7 +87,7 @@
               </mat-form-field>
             </p>
 
-            <p>
+            <!-- <p>
               <mat-form-field class="full-width"
                color="{{(formErrors.phone) ? 'warn' : 'primary'}}">
                 <input class="formElement" matInput formControlName="phone" placeholder="Telefonnummer" type="text" required>
@@ -96,7 +96,7 @@
                     {{formErrors.phone}}</span>
                 </mat-hint>
               </mat-form-field>
-            </p>
+            </p> -->
 
             <p>
                 <mat-form-field class="full-width"
@@ -109,7 +109,7 @@
                 </mat-form-field>
             </p>
 
-            <p>
+            <!-- <p>
                 <mat-form-field class="full-width"
                   color="{{(formErrors.day) ? 'warn' : 'primary'}}">
                   <mat-label>Präferenz Vorrunde</mat-label>
@@ -121,7 +121,7 @@
                       <span [hidden]="!(formErrors.day)">{{formErrors.day}}</span>
                   </mat-hint>
                 </mat-form-field>
-            </p>
+            </p> -->
 
             <button style="margin: 100 auto;float: right; font-size: 20px" class="formElement" type="submit" mat-button class="background-primary" [disabled]="feedbackForm.invalid" >Anmeldung jetzt abschicken</button>
 
@@ -132,9 +132,9 @@
               <h2>Wir haben deine Anmeldung erhalten, Vielen Dank! Wir melden uns bei dir in Kürze.</h2>
               <p>Name: {{submittedFeedback.name}}</p>
               <p>E-Mail: {{submittedFeedback.email}}</p>
-              <p>Telefonnummer: {{submittedFeedback.phone}}</p>
+              <!-- <p>Telefonnummer: {{submittedFeedback.phone}}</p> -->
               <p>Teamname: {{submittedFeedback.teamname}}</p>
-              <p>Präferenz Vorrunde: {{submittedFeedback.day}}</p>
+              <!-- <p>Präferenz Vorrunde: {{submittedFeedback.day}}</p> -->
           </div>
         </div>
 
