--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -47,8 +47,8 @@
 
       <button mat-menu-item routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</button>
       <!--  <button mat-menu-item routerLink="/kleinfeldturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Kleinfeldturnier</button> -->
-       <button mat-menu-item routerLink="/bocciaturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Bocciaturnier</button>
-      <!-- <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Hallenturnier</button> -->
+       <!-- <button mat-menu-item routerLink="/bocciaturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Bocciaturnier</button> -->
+      <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Hallenturnier</button>
       <button mat-menu-item routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Über uns</button>
       <button mat-menu-item routerLink="/contact" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Kontakt</button>
       <button mat-menu-item routerLink="/fanshop" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Fanshop</button>
@@ -119,8 +119,8 @@
 
       <button mat-menu-item routerLink="/donation" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Matchballspende</button>
       <!--  <button mat-menu-item routerLink="/kleinfeldturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Kleinfeldturnier</button> -->
-       <button mat-menu-item routerLink="/bocciaturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Bocciaturnier</button>
-      <!-- <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Hallenturnier</button> -->
+       <!-- <button mat-menu-item routerLink="/bocciaturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Bocciaturnier</button> -->
+      <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Hallenturnier</button>
       <button mat-menu-item routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Über uns</button>
       <button mat-menu-item routerLink="/contact" routerLinkActive="active"><span class="fa fa-info fa-sm"></span> Kontakt</button>
       <button mat-menu-item routerLink="/fanshop" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Fanshop</button>
