feat(champ): Update content

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -71,9 +71,6 @@
     <b>Spieltermine Herbst 2024:</b>
   </p>
 
-  <p class="normal">
-    2. Runde - FREITAG, 13.09.2024 - 18:30 Uhr - Sportplatz Södingberg - STT Pichler : HV TDP Stainz
-  </p>
 
   <p class="normal">
     3. Runde - FREITAG, 20.09.2024 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
@@ -84,15 +81,11 @@
   </p>
 
   <p class="normal">
-    5. Runde - SAMSTAG, 05.10.2024 - 16:00 Uhr - Stadion Stainz - HV TDP Stainz : GSV St. Oswald
+    5. Runde - SAMSTAG, 12.10.2024 - 16:30 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
   </p>
 
   <p class="normal">
-    6. Runde - SAMSTAG, 12.10.2024 - 16:30 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
-  </p>
-
-  <p class="normal">
-    7. Runde - SAMSTAG, 26.10.2024 - 16:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Pichler
+    6. Runde - SAMSTAG, 26.10.2024 - 16:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Pichler
   </p>
 
   <p class="normal">
@@ -112,6 +105,15 @@
   <p class="small">
     Testspiel - HV TDP Stainz : Sporting Pettersdorf II 1:3
   </p>
+
+  <p class="small">
+    1. Runde, STT Pichler : HV TDP Stainz 7:0
+  </p>
+
+  <p class="small">
+    2. Runde, HV TDP Stainz : GSV St. Oswald 2:0
+  </p>
+
 </div>
 
 <div *ngIf="season == '2023-2024'">
