feat(champ): Update round 3

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -71,21 +71,20 @@
     <b>Spieltermine Herbst 2024:</b>
   </p>
 
-
   <p class="normal">
-    3. Runde - FREITAG, 20.09.2024 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
+    4. Runde - FREITAG, 20.09.2024 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
   </p>
 
   <p class="normal">
-    4. Runde - FREITAG, 27.09.2024 - 17:30 Uhr - Sportplatz St. Johann - SK Hohenburg : HV TDP Stainz
+    5. Runde - FREITAG, 27.09.2024 - 17:30 Uhr - Sportplatz St. Johann - SK Hohenburg : HV TDP Stainz
   </p>
 
   <p class="normal">
-    5. Runde - SAMSTAG, 12.10.2024 - 16:30 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
+    6. Runde - SAMSTAG, 12.10.2024 - 16:30 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
   </p>
 
   <p class="normal">
-    6. Runde - SAMSTAG, 26.10.2024 - 16:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Pichler
+    7. Runde - SAMSTAG, 26.10.2024 - 16:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Pichler
   </p>
 
   <p class="normal">
@@ -112,6 +111,10 @@
 
   <p class="small">
     2. Runde, HV TDP Stainz : GSV St. Oswald 2:0
+  </p>
+
+  <p class="small">
+    3. Runde, SV Geistthal : HV TDP Stainz 2:3
   </p>
 
 </div>
