feat(championship): Update content

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -70,7 +70,7 @@
   <p class="normal">
     <b>Spieltermine Herbst 2024:</b>
   </p>
-
+<!--
   <p class="normal">
     4. Runde - FREITAG, 20.09.2024 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
   </p>
@@ -82,9 +82,10 @@
   <p class="normal">
     6. Runde - SAMSTAG, 12.10.2024 - 16:30 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
   </p>
+  -->
 
   <p class="normal">
-    7. Runde - SAMSTAG, 26.10.2024 - 16:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Pichler
+    Cup Achtelfinale - MITTWOCH, 30.10.2024 - 18:30 Uhr - Stadion Stainz - HV TDP Stainz : STT Fürndörfler
   </p>
 
   <p class="normal">
@@ -115,6 +116,11 @@
 
   <p class="small">
     3. Runde, SV Geistthal : HV TDP Stainz 2:3
+  </p>
+
+
+  <p class="normal">
+    4. Runde, HV TDP Stainz : STT Pichler 2:3
   </p>
 
 </div>
