feat(goalofseason): Implement goal of season voting

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -67,9 +67,9 @@
 </mat-table>
 
 <div *ngIf="season == '2024-2025'">
-  <p class="normal">
+  <!-- <p class="normal">
     <b>Spieltermine Herbst 2024:</b>
-  </p>
+  </p> -->
 <!--
   <p class="normal">
     4. Runde - FREITAG, 20.09.2024 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
@@ -84,9 +84,7 @@
   </p>
   -->
 
-  <p class="normal">
-    Cup Achtelfinale - MITTWOCH, 30.10.2024 - 18:30 Uhr - Stadion Stainz - HV TDP Stainz : STT Fürndörfler
-  </p>
+
 
   <p class="normal">
     <b>Unsere Torschützen:</b>
@@ -119,8 +117,12 @@
   </p>
 
 
-  <p class="normal">
+  <p class="small">
     4. Runde, HV TDP Stainz : STT Pichler 2:3
+  </p>
+
+  <p class="small">
+    Cup Achtelfinale, HV TDP Stainz : STT Fürndörfler 6:5 nach Elfmeterschießen
   </p>
 
 </div>
