--- a/src/styles.css
+++ b/src/styles.css
@@ -293,6 +293,12 @@ h4.header {
     color: white;
   }
 
+  .bordered-light {
+    border-style: solid;
+    border-width: 1px;
+    color: white;
+  }
+
 /* Carousel */
 
 #container {
