--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -25,6 +25,11 @@
         <button mat-menu-item routerLink="/goaloftheseason/2024">Tor der Saison 2024</button>
       </mat-menu>
 
+      <button mat-menu-item [matMenuTriggerFor]="playeroftheseason"><span class="fa fa-list-ol fa-sm"></span> Spieler der Saison</button>
+      <mat-menu #playeroftheseason="matMenu">
+        <button mat-menu-item routerLink="/playeroftheseason/2024">Spieler der Saison 2024</button>
+      </mat-menu>
+
       <!-- <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button> -->
       <!-- <button mat-menu-item routerLink="/torschusschallenge" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge</button> -->
       <!-- <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button> -->
@@ -96,6 +101,11 @@
         <button mat-menu-item routerLink="/goaloftheseason/2022">Tor der Saison 2022</button>
         <button mat-menu-item routerLink="/goaloftheseason/2023">Tor der Saison 2023</button>
         <button mat-menu-item routerLink="/goaloftheseason/2024">Tor der Saison 2024</button>
+      </mat-menu>
+
+      <button mat-menu-item [matMenuTriggerFor]="playeroftheseason"><span class="fa fa-list-ol fa-sm"></span> Spieler der Saison</button>
+      <mat-menu #playeroftheseason="matMenu">
+        <button mat-menu-item routerLink="/playeroftheseason/2024">Spieler der Saison 2024</button>
       </mat-menu>
 
       <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button>
