--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -34,6 +34,7 @@
     <li><span class="fa fa-dice-one fa-sm"></span> 1x Turniersieg beim Hallenturnier des SVU St. Stefan ob Stainz (2023)</li>
     <li><span class="fa fa-medal fa-sm"></span> Testspielerfolg gegen die Kampfmannschaft des SC Stainz (2015)</li>
     <li><span class="fa fa-archway fa-sm"></span> Testspiel gegen den FC Red Bull Salzburg (2017)</li>
+    <li><span class="fa fa-archway fa-sm"></span> Testspiel gegen FK Austria Wien Allstars (2024)</li>
     <li><span class="fa fa-futbol fa-sm"></span> Stammtischcup Finaltag (2018)</li>
     <li><span class="fa fa-medal fa-sm"></span> Österreichischer Fan Meister (2021)</li>
   </ul>
