feat(season): UX improvements for player & goal of the season

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,16 +18,16 @@
         <button mat-menu-item routerLink="/championship/2021-2022">Saison 2021/2022</button>
       </mat-menu>
 
-      <button mat-menu-item [matMenuTriggerFor]="goaloftheseason"><span class="fa fa-list-ol fa-sm"></span> Tor der Saison</button>
+      <button mat-menu-item [matMenuTriggerFor]="goaloftheseason"><span class="fa fa-list-ol fa-sm"></span> Tor des Jahres</button>
       <mat-menu #goaloftheseason="matMenu">
-        <button mat-menu-item routerLink="/goaloftheseason/2022">Tor der Saison 2022</button>
-        <button mat-menu-item routerLink="/goaloftheseason/2023">Tor der Saison 2023</button>
-        <button mat-menu-item routerLink="/goaloftheseason/2024">Tor der Saison 2024</button>
+        <button mat-menu-item routerLink="/goaloftheseason/2022">Tor des Jahres 2022</button>
+        <button mat-menu-item routerLink="/goaloftheseason/2023">Tor des Jahres 2023</button>
+        <button mat-menu-item routerLink="/goaloftheseason/2024">Tor des Jahres 2024</button>
       </mat-menu>
 
-      <button mat-menu-item [matMenuTriggerFor]="playeroftheseason"><span class="fa fa-list-ol fa-sm"></span> Spieler der Saison</button>
+      <button mat-menu-item [matMenuTriggerFor]="playeroftheseason"><span class="fa fa-list-ol fa-sm"></span> Spieler des Jahres</button>
       <mat-menu #playeroftheseason="matMenu">
-        <button mat-menu-item routerLink="/playeroftheseason/2024">Spieler der Saison 2024</button>
+        <button mat-menu-item routerLink="/playeroftheseason/2024">Spieler des Jahres 2024</button>
       </mat-menu>
 
       <!-- <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button> -->
@@ -96,16 +96,16 @@
         <button mat-menu-item routerLink="/championship/2021-2022">Saison 2021/2022</button>
       </mat-menu>
 
-      <button mat-menu-item [matMenuTriggerFor]="goaloftheseason"><span class="fa fa-list-ol fa-sm"></span> Tor der Saison</button>
+      <button mat-menu-item [matMenuTriggerFor]="goaloftheseason"><span class="fa fa-list-ol fa-sm"></span> Tor des Jahres</button>
       <mat-menu #goaloftheseason="matMenu">
-        <button mat-menu-item routerLink="/goaloftheseason/2022">Tor der Saison 2022</button>
-        <button mat-menu-item routerLink="/goaloftheseason/2023">Tor der Saison 2023</button>
-        <button mat-menu-item routerLink="/goaloftheseason/2024">Tor der Saison 2024</button>
+        <button mat-menu-item routerLink="/goaloftheseason/2022">Tor des Jahres 2022</button>
+        <button mat-menu-item routerLink="/goaloftheseason/2023">Tor des Jahres 2023</button>
+        <button mat-menu-item routerLink="/goaloftheseason/2024">Tor des Jahres 2024</button>
       </mat-menu>
 
-      <button mat-menu-item [matMenuTriggerFor]="playeroftheseason"><span class="fa fa-list-ol fa-sm"></span> Spieler der Saison</button>
+      <button mat-menu-item [matMenuTriggerFor]="playeroftheseason"><span class="fa fa-list-ol fa-sm"></span> Spieler des Jahres</button>
       <mat-menu #playeroftheseason="matMenu">
-        <button mat-menu-item routerLink="/playeroftheseason/2024">Spieler der Saison 2024</button>
+        <button mat-menu-item routerLink="/playeroftheseason/2024">Spieler des Jahres 2024</button>
       </mat-menu>
 
       <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button>
