--- a/src/app/playeroftheseason/playeroftheseason.component.html
+++ b/src/app/playeroftheseason/playeroftheseason.component.html
@@ -1,5 +1,5 @@
 <h1 class="large header">
-    Wähle den Spieler der Saison {{season}}
+    Wähle den Spieler des Jahres {{season}}
 </h1>
 
 <div *ngIf="canVote">
