--- a/src/app/playeroftheseason/playeroftheseason.component.css
+++ b/src/app/playeroftheseason/playeroftheseason.component.css
@@ -8,13 +8,13 @@
 }
 
 mat-list-option {
-  background: gray;
+  background: #3b3b3b;
 }
 
 mat-list-option[aria-selected="true"] {
-  background: hotpink;
+  background: #c2185b;
 }
 
 mat-list-option[aria-selected="false"] {
-  background: gray;
+  background: #3b3b3b;
 }
