--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,6 +30,7 @@
         <button mat-menu-item routerLink="/playeroftheseason/2024">Spieler des Jahres 2024</button>
       </mat-menu>
 
+      <button mat-menu-item routerLink="/comedyhirten" routerLinkActive="active"><span class="fa fa-heart"></span> Comedyhirten</button>
       <!-- <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button> -->
       <!-- <button mat-menu-item routerLink="/torschusschallenge" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge</button> -->
       <!-- <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button> -->
@@ -108,7 +109,8 @@
         <button mat-menu-item routerLink="/playeroftheseason/2024">Spieler des Jahres 2024</button>
       </mat-menu>
 
-      <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button>
+      <button mat-menu-item routerLink="/comedyhirten" routerLinkActive="active"><span class="fa fa-heart"></span> Comedyhirten</button>
+      <!-- <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button>  -->
       <!-- <button mat-menu-item routerLink="/torschusschallenge" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge</button> -->
       <!-- <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button> -->
 
