feat(gallery): Add 2025 season

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,6 +39,7 @@
 
       <button mat-menu-item [matMenuTriggerFor]="gallery"><span class="fa fa-camera fa-sm"></span> Galerie</button>
       <mat-menu #gallery="matMenu">
+          <button mat-menu-item routerLink="/gallery/2025">2025</button>
           <button mat-menu-item routerLink="/gallery/2024">2024</button>
           <button mat-menu-item routerLink="/gallery/2023">2023</button>
           <button mat-menu-item routerLink="/gallery/2022">2022</button>
@@ -118,6 +119,7 @@
 
       <button mat-menu-item [matMenuTriggerFor]="gallery"><span class="fa fa-camera fa-sm"></span> Galerie</button>
       <mat-menu #gallery="matMenu">
+          <button mat-menu-item routerLink="/gallery/2025">2025</button>
           <button mat-menu-item routerLink="/gallery/2024">2024</button>
           <button mat-menu-item routerLink="/gallery/2023">2023</button>
           <button mat-menu-item routerLink="/gallery/2022">2022</button>
