feat(champ): Update championship

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -67,24 +67,57 @@
 </mat-table>
 
 <div *ngIf="season == '2024-2025'">
-  <!-- <p class="normal">
-    <b>Spieltermine Herbst 2024:</b>
-  </p> -->
-<!--
   <p class="normal">
-    4. Runde - FREITAG, 20.09.2024 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
+    <b>Spieltermine Frühjahr 2025:</b>
   </p>
 
   <p class="normal">
-    5. Runde - FREITAG, 27.09.2024 - 17:30 Uhr - Sportplatz St. Johann - SK Hohenburg : HV TDP Stainz
+    1. Runde - SAMSTAG, 05.04.2025 - 16:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
   </p>
 
   <p class="normal">
-    6. Runde - SAMSTAG, 12.10.2024 - 16:30 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
+    2. Runde - FREITAG, 11.04.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : SV Geistthal
   </p>
-  -->
 
+  <p class="normal">
+    3. Runde - FREITAG, 25.04.2025 - 19:00 Uhr - Stadion Voitsberg - HV TDP Stainz : STT Multitask
+  </p>
 
+  <p class="normal">
+    4. Runde - SAMSTAG, 10.05.2025 - 18:00 Uhr - Stadion Stainz - HV TDP Stainz : SK Hohenburg
+  </p>
+
+  <p class="normal">
+    5. Runde - SAMSTAG, 24.05.2025 - 16:00 Uhr - Sportplatz Geistthal - SV Geistthal : HV TDP Stainz
+  </p>
+
+  <p class="normal">
+    6. Runde - SAMSTAG, 14.06.2025 - 15:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Pichler
+  </p>
+
+  <p class="normal">
+    7. Runde - FREITAG, 20.06.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
+  </p>
+
+  <p class="normal">
+    8. Runde - SAMSTAG, 28.06.2025 - 16:00 Uhr - Sportplatz St. Johann - SK Hohenburg : HV TDP Stainz
+  </p>
+
+  <p class="normal">
+    9. Runde - FREITAG, 04.07.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : GSV St. Oswald
+  </p>
+
+  <p class="normal">
+    10. Runde - TBD - Sportplatz St. Oswald - GSV St. Oswald : HV TDP Stainz
+  </p>
+
+  <p class="normal">
+    Nachtragsspiel - TBD - Sportplatz St. Johann - SK Hohenburg : HV TDP Stainz
+  </p>
+
+  <p class="normal">
+    Cup Viertelfinale - TBD - HV TDP Stainz : SPG HFC St. Johann
+  </p>
 
   <p class="normal">
     <b>Unsere Torschützen:</b>
@@ -97,7 +130,7 @@
   <br>
 
   <p class="normal">
-    <b>Ergebnisse:</b>
+    <b>Ergebnisse Herbst:</b>
   </p>
 
   <p class="small">
@@ -116,13 +149,20 @@
     3. Runde, SV Geistthal : HV TDP Stainz 2:3
   </p>
 
-
   <p class="small">
     4. Runde, HV TDP Stainz : STT Pichler 2:3
   </p>
 
   <p class="small">
     Cup Achtelfinale, HV TDP Stainz : STT Fürndörfler 6:5 nach Elfmeterschießen
+  </p>
+
+  <p class="normal">
+    <b>Ergebnisse Frühjahr:</b>
+  </p>
+
+  <p class="small">
+    Testspiel - HV TDP Stainz : Sporting Pettersdorf II 9:1
   </p>
 
 </div>
