--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -72,43 +72,39 @@
   </p>
 
   <p class="normal">
-    1. Runde - SAMSTAG, 05.04.2025 - 16:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
+    7. Runde - FREITAG, 11.04.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : SV Geistthal
   </p>
 
   <p class="normal">
-    2. Runde - FREITAG, 11.04.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : SV Geistthal
+    8. Runde - FREITAG, 25.04.2025 - 19:00 Uhr - Stadion Voitsberg - HV TDP Stainz : STT Multitask
   </p>
 
   <p class="normal">
-    3. Runde - FREITAG, 25.04.2025 - 19:00 Uhr - Stadion Voitsberg - HV TDP Stainz : STT Multitask
+    9. Runde - SAMSTAG, 10.05.2025 - 18:00 Uhr - Stadion Stainz - HV TDP Stainz : SK Hohenburg
   </p>
 
   <p class="normal">
-    4. Runde - SAMSTAG, 10.05.2025 - 18:00 Uhr - Stadion Stainz - HV TDP Stainz : SK Hohenburg
+    10. Runde - SAMSTAG, 24.05.2025 - 16:00 Uhr - Sportplatz Geistthal - SV Geistthal : HV TDP Stainz
   </p>
 
   <p class="normal">
-    5. Runde - SAMSTAG, 24.05.2025 - 16:00 Uhr - Sportplatz Geistthal - SV Geistthal : HV TDP Stainz
+    11. Runde - SAMSTAG, 14.06.2025 - 15:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Pichler
   </p>
 
   <p class="normal">
-    6. Runde - SAMSTAG, 14.06.2025 - 15:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Pichler
+    12. Runde - FREITAG, 20.06.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
   </p>
 
   <p class="normal">
-    7. Runde - FREITAG, 20.06.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
+    13. Runde - SAMSTAG, 28.06.2025 - 16:00 Uhr - Sportplatz St. Johann - SK Hohenburg : HV TDP Stainz
   </p>
 
   <p class="normal">
-    8. Runde - SAMSTAG, 28.06.2025 - 16:00 Uhr - Sportplatz St. Johann - SK Hohenburg : HV TDP Stainz
+    14. Runde - FREITAG, 04.07.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : GSV St. Oswald
   </p>
 
   <p class="normal">
-    9. Runde - FREITAG, 04.07.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : GSV St. Oswald
-  </p>
-
-  <p class="normal">
-    10. Runde - TBD - Sportplatz St. Oswald - GSV St. Oswald : HV TDP Stainz
+    15. Runde - TBD - Sportplatz St. Oswald - GSV St. Oswald : HV TDP Stainz
   </p>
 
   <p class="normal">
@@ -118,6 +114,8 @@
   <p class="normal">
     Cup Viertelfinale - TBD - HV TDP Stainz : SPG HFC St. Johann
   </p>
+
+  <br>
 
   <p class="normal">
     <b>Unsere Torschützen:</b>
@@ -163,6 +161,10 @@
 
   <p class="small">
     Testspiel - HV TDP Stainz : Sporting Pettersdorf II 9:1
+  </p>
+
+  <p class="small">
+    6. Runde, HV TDP Stainz : STT Multitask 3:2
   </p>
 
 </div>
