feat(championship): Update calendar

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -72,11 +72,7 @@
   </p>
 
   <p class="normal">
-    7. Runde - FREITAG, 11.04.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : SV Geistthal
-  </p>
-
-  <p class="normal">
-    8. Runde - FREITAG, 25.04.2025 - 19:00 Uhr - Stadion Voitsberg - HV TDP Stainz : STT Multitask
+    8. Runde - MITTWOCH, 30.04.2025 - 19:00 Uhr - Stadion St. Oswald -  HV TDP Stainz : GSV St. Oswald
   </p>
 
   <p class="normal">
@@ -88,31 +84,27 @@
   </p>
 
   <p class="normal">
-    11. Runde - SAMSTAG, 14.06.2025 - 15:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Pichler
+    Cup Viertelfinale - FREITAG, 30.05.2025 - 19:00 Uhr - Sportplatz Geistthal - HV TDP Stainz : SPG HFC St. Johann
   </p>
 
   <p class="normal">
-    12. Runde - FREITAG, 20.06.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
+    11. Runde - FREITAG, 06.06.2025 - 18:30 Uhr - Stadion Voitsberg - STT Multitask : HV TDP Stainz
   </p>
 
   <p class="normal">
-    13. Runde - SAMSTAG, 28.06.2025 - 16:00 Uhr - Sportplatz St. Johann - SK Hohenburg : HV TDP Stainz
+    12. Runde - FREITAG, 13.06.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Pichler
+  </p>
+
+  <p class="normal">
+    13. Runde - FREITAG, 20.06.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
+  </p>
+
+  <p class="normal">
+    Nachtragsspiel - SAMSTAG, 27.06.2025 - 18:30 Uhr - Sportplatz St. Johann - SK Hohenburg : HV TDP Stainz
   </p>
 
   <p class="normal">
     14. Runde - FREITAG, 04.07.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : GSV St. Oswald
-  </p>
-
-  <p class="normal">
-    15. Runde - TBD - Sportplatz St. Oswald - GSV St. Oswald : HV TDP Stainz
-  </p>
-
-  <p class="normal">
-    Nachtragsspiel - TBD - Sportplatz St. Johann - SK Hohenburg : HV TDP Stainz
-  </p>
-
-  <p class="normal">
-    Cup Viertelfinale - TBD - HV TDP Stainz : SPG HFC St. Johann
   </p>
 
   <br>
@@ -165,6 +157,10 @@
 
   <p class="small">
     6. Runde, HV TDP Stainz : STT Multitask 3:2
+  </p>
+
+  <p class="small">
+    7. Runde, HV TDP Stainz : SV Geistthal 1:2
   </p>
 
 </div>
