feat(bigdarts): Add big darts component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,6 +18,8 @@
         <button mat-menu-item routerLink="/championship/2021-2022">Saison 2021/2022</button>
       </mat-menu>
 
+      <button mat-menu-item routerLink="/bigdarts" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Big Darts</button>
+
       <button mat-menu-item [matMenuTriggerFor]="goaloftheseason"><span class="fa fa-list-ol fa-sm"></span> Tor des Jahres</button>
       <mat-menu #goaloftheseason="matMenu">
         <button mat-menu-item routerLink="/goaloftheseason/2022">Tor des Jahres 2022</button>
@@ -97,6 +99,8 @@
         <button mat-menu-item routerLink="/championship/2022-2023">Saison 2022/2023</button>
         <button mat-menu-item routerLink="/championship/2021-2022">Saison 2021/2022</button>
       </mat-menu>
+
+      <button mat-menu-item routerLink="/bigdarts" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Big Darts</button>
 
       <button mat-menu-item [matMenuTriggerFor]="goaloftheseason"><span class="fa fa-list-ol fa-sm"></span> Tor des Jahres</button>
       <mat-menu #goaloftheseason="matMenu">
