--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -72,10 +72,6 @@
   </p>
 
   <p class="normal">
-    8. Runde - MITTWOCH, 30.04.2025 - 19:00 Uhr - Stadion St. Oswald -  HV TDP Stainz : GSV St. Oswald
-  </p>
-
-  <p class="normal">
     9. Runde - SAMSTAG, 10.05.2025 - 18:00 Uhr - Stadion Stainz - HV TDP Stainz : SK Hohenburg
   </p>
 
@@ -161,6 +157,10 @@
 
   <p class="small">
     7. Runde, HV TDP Stainz : SV Geistthal 1:2
+  </p>
+
+  <p class="small">
+    8. Runde, GSV St. Oswald : HV TDP Stainz 1:2
   </p>
 
 </div>
