feat(championship): Update round 9

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -72,10 +72,6 @@
   </p>
 
   <p class="normal">
-    9. Runde - SAMSTAG, 10.05.2025 - 18:00 Uhr - Stadion Stainz - HV TDP Stainz : SK Hohenburg
-  </p>
-
-  <p class="normal">
     10. Runde - SAMSTAG, 24.05.2025 - 16:00 Uhr - Sportplatz Geistthal - SV Geistthal : HV TDP Stainz
   </p>
 
@@ -161,6 +157,10 @@
 
   <p class="small">
     8. Runde, GSV St. Oswald : HV TDP Stainz 1:2
+  </p>
+
+  <p class="small">
+    9. Runde, HV TDP Stainz : SK Hohenburg 3:5
   </p>
 
 </div>
