feat(champ): Upate content

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -72,21 +72,14 @@
   </p>
 
   <p class="normal">
-    10. Runde - SAMSTAG, 24.05.2025 - 16:00 Uhr - Sportplatz Geistthal - SV Geistthal : HV TDP Stainz
+    Cup Halbfinale - MITTWOCH, 09.07.2025 - 19:00 Uhr - Sportplatz St. Johann
   </p>
 
   <p class="normal">
-    Cup Viertelfinale - FREITAG, 30.05.2025 - 19:00 Uhr - Sportplatz Geistthal - HV TDP Stainz : SPG HFC St. Johann
+    mögliches Cup Finale - SAMSTAG, 12.07.2025 - 15:00 Uhr - Sportplatz St. Johann
   </p>
 
-  <p class="normal">
-    11. Runde - FREITAG, 06.06.2025 - 18:30 Uhr - Stadion Voitsberg - STT Multitask : HV TDP Stainz
-  </p>
-
-  <p class="normal">
-    12. Runde - FREITAG, 13.06.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Pichler
-  </p>
-
+<!--
   <p class="normal">
     13. Runde - FREITAG, 20.06.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : STT Multitask
   </p>
@@ -94,10 +87,7 @@
   <p class="normal">
     Nachtragsspiel - SAMSTAG, 27.06.2025 - 18:30 Uhr - Sportplatz St. Johann - SK Hohenburg : HV TDP Stainz
   </p>
-
-  <p class="normal">
-    14. Runde - FREITAG, 04.07.2025 - 19:00 Uhr - Stadion Stainz - HV TDP Stainz : GSV St. Oswald
-  </p>
+-->
 
   <br>
 
@@ -161,6 +151,34 @@
 
   <p class="small">
     9. Runde, HV TDP Stainz : SK Hohenburg 3:5
+  </p>
+
+  <p class="small">
+    Cup Viertelfinale, HV TDP Stainz : SPG HFC St. Johann 2:1
+  </p>
+
+  <p class="small">
+    10. Runde, SK Hohenburg : HV TDP Stainz 1:1
+  </p>
+
+  <p class="small">
+    11. Runde, STT Multitask : HV TDP Stainz 2:0
+  </p>
+
+  <p class="small">
+    12. Runde, SV Geistthal : HV TDP Stainz 2:0
+  </p>
+
+  <p class="small">
+    13. Runde, HV TDP Stainz : STT Pichler 2:1
+  </p>
+
+  <p class="small">
+    Nachtragsspiel, 5. Runde - SK Hohenburg : HV TDP Stainz 5:2
+  </p>
+
+  <p class="small">
+    14. Runde, HV TDP Stainz : GSV St. Oswald 3:3
   </p>
 
 </div>
